log
Wed, Mar 26, 2025 11:47:51 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025 11:53:20 PM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|5
total_score: 10/70
87e9ba5
Thu, Mar 27, 2025 12:07:06 AM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:9: error: 'List {aka struct List}' has no member named 'cuurent'; did you mean 'current'?
     list->cuurent = list->head;
         ^~
list.c:43:9: error: expected expression before ')' token
     if ()
         ^
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
aa0a42c
Thu, Mar 27, 2025 12:12:39 AM: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
8451173
Thu, Mar 27, 2025 12:16:05 AM: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
d6125e6
Thu, Mar 27, 2025 12:17:01 AM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
80d2250
Thu, Mar 27, 2025 12:35:24 PM: 
 list.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a8aa604
Thu, Mar 27, 2025 12:56:46 PM: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
12cb945
Thu, Mar 27, 2025  1:03:55 PM: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c:91:1: error: expected identifier or '(' before '}' token
 }
 ^
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
588f153
Thu, Mar 27, 2025  1:08:36 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
87402c9
Thu, Mar 27, 2025  1:12:25 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:74:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
2393180
Thu, Mar 27, 2025  1:17:35 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
881e67a
Thu, Mar 27, 2025  1:19:17 PM: 
 list.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
08e5756
Thu, Mar 27, 2025  1:22:51 PM: 
 list.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
f69f156
Thu, Mar 27, 2025  1:29:32 PM: 
 list.c | 23 -----------------------
 1 file changed, 23 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
b236c38
Thu, Mar 27, 2025  1:33:00 PM: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
0acbe7f
Thu, Mar 27, 2025  2:03:23 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:74:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
8a8f3af
Thu, Mar 27, 2025  2:04:47 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:74:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
6d0bbfe
Thu, Mar 27, 2025  2:08:29 PM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:56:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
list.c: In function 'prevList':
list.c:76:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
de5d804
Thu, Mar 27, 2025  2:10:05 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
4170836
Thu, Mar 27, 2025  2:10:35 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:81:6: error: expected expression before 'Node'
     *Node * newNode = createNode(data);
      ^~~~
list.c:83:22: error: 'newNode' undeclared (first use in this function)
         list->head = newNode;
                      ^~~~~~~
list.c:83:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d7a18e0
Thu, Mar 27, 2025  2:13:36 PM: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:81:6: error: expected expression before 'Node'
     *Node * newNode = createNode(data);
      ^~~~
list.c:82:5: error: 'newNode' undeclared (first use in this function)
     newNode->next = list->head;
     ^~~~~~~
list.c:82:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
550725b
Thu, Mar 27, 2025  2:22:52 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
e785dff
